# quantum_task

./: .gitignore  README.md  pyproject.toml
src/: solution.py
src/task_1/: solution.py
src/task_2/: README.md  __init__.py  eda.ipynb  models.py  predict.py  requirements.txt  train.py
src/task_2/data/: polynomial_predictions.csv
src/task_2/models/: polynomial.pkl
tests/: test_task_1.py
