[tool.poetry]
name = "quantum"
version = "0.1.0"
description = "Recrutiment task for Quantum"
authors = ["Filip Chrzuszcz"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ipykernel = "^6.29.5"
black = "^24.4.2"
pre-commit = "^2.20.0"
pytest = "^8.3.2"
flake8 = "^7.1.1"
isort = "^5.13.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "old", "build", "dist",".venv"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]